	predict(..., type="working") models, but then adopted a policy of
	never having partial component, but always returning only the
	component requested for. Therefore warning messages of ignoring
	pCCA component were removed. This log entry was made to emphasize
	that there is a policy decision, and an alternative policy can be
	tracked in the repository.

	* simulate: the simulate functions for "rda" and "cca" return
	objects with original row and column names. Function capscale()
	already did so, and simulate.nullmodel() was changed so in vegan
	2.1-24 (r2396).
	
Version 2.1-24 (closed February 2, 2013)

	* simulate.nullmodel: output array inherits dimnames after the
	input data matrix, this is often required by oecosimu.
	Dimension names are now only stored once for all nsim
	simulations, so it is an improvement over the implementation
	in commsimulator.

	* oecosimu: the 'oecosimu' list cannot be added to the result if
	the nestfun() returns a data frame. In that case, the 'oecosimu'
	list is treated like a variable, and this gives either an error of
	wrong length or if the length matches, a mess.  Now data frame is
	silently turned into a list which also means that it will not be
	printed with the output. The name of the 'statistic' is not used
	for unnamed vector output where it would only name the first item
	(like would be the case if the 'statistic' was extracted from a
	data frame). It is now checked that only one 'statistic' is given
	and a comprehensible error message is issued instead of the
	current confusing one. The changes were trickered when testing
	picante::pd().

	* protest: huge speed-up. Instead of calling procrustes() in every
	permutation step, we only calculate the goodness of fit statistic
	in svd(). This avoids a huge overhead of procrustes(). In a test
	with a 160 x 12 matrix (RDA scores from Bryce Canyon data
	'bryceveg') with 9999 permutations, the time went down from 12 sec